services/patient-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - port: 8080
      targetPort: 3000
  type: LoadBalancer
